/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package framework;

/**
 *
 * @author c16318
 */
public abstract class Product {
    
    public abstract void use();
       
    
}
